# g-stx-api

game-stockx-api/: Cargo.toml  migrate.sh
game-stockx-api/migrations/: down.sql
game-stockx-api/migrations/00000000000000_diesel_initial_setup/: up.sql
game-stockx-api/migrations/2025-06-01-202512_create_tables/: down.sql  up.sql
game-stockx-api/migrations/2025-12-06-154047-0000_release_prices/: down.sql  up.sql
game-stockx-api/migrations/2025-12-20-184343-0000_alternative_names/: down.sql  up.sql
game-stockx-api/migrations/2025-12-21-111127-0000_companies/: down.sql  up.sql
game-stockx-api/migrations/2025-12-21-124326-0000_involved_companies/: down.sql  up.sql
game-stockx-api/migrations/2025-12-22-153115-0000_franschises/: down.sql  up.sql
game-stockx-api/migrations/2025-12-27-172600-0000_indexes/: down.sql  up.sql
game-stockx-api/migrations/2025-12-27-184236-0000_more-indexes/: up.sql
game-stockx-api/migrations/2025-12-31-172709-0000_more-game-fields/: down.sql  up.sql
game-stockx-api/migrations/2026-01-03-155230-0000_uhr-game-id/: down.sql  up.sql
game-stockx-api/migrations/2026-01-03-170518-0000_uhr-game-id/: down.sql  up.sql
game-stockx-api/src/: auth.rs  chat.rs  collection.rs  collectors.rs  main.rs  metrics.rs  metrics_middleware.rs  pagination.rs  platforms.rs  product.rs  product_details.rs  product_list.rs  redis.rs  register.rs  sales.rs  schema.rs  simple_rate_limiter.rs
